force-app/main/default/objects/Work_Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>NewYork</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
            <value>
                <fullName>Luxemburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>