force-app/main/default/objects/Work_Location__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <description>This field indicates the zipcode</description>
    <label>ZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>