force-app/main/default/objects/Work_Location__c/validationRules/for_zip_code.validationRule-meta.xml
<ValidationRule>
    <fullName>for_zip_code</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(  ISNUMBER(ZipCode__c)  )   ||  (LEN(ZipCode__c )&lt;&gt;5)</errorConditionFormula>
    <errorDisplayField>ZipCode__c</errorDisplayField>
    <errorMessage>Zip Code must be in 5-digit format (0
9)</errorMessage>
</ValidationRule>